fixed position for project elements on mobile

--- a/projectStyle.css
+++ b/projectStyle.css
@@ -76,6 +76,10 @@
 /* mobile site (tested on iPhone 10) */
 @media screen and (max-width:768px) {
     .projectEle {
+        position: relative;
+    }
+
+    .projectEle {
         margin-left: 4em;
     }
 }
